--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,7 +24,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: ${{ env.TARGET_REPO }}
-          token: ${{ PERSONAL_ACCESS_TOKEN }}
+          token: ${{ env.PERSONAL_ACCESS_TOKEN }}
           path: target_repo
 
       - name: Remove existing contents in target directory
